[project]
name = "autism-screening-ml-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.9"
dependencies = [
    "gradio>=4.44.1",
    "joblib>=1.5.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "pandas>=2.3.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "typer>=0.16.1",
]
